2008-03-21  Don Scorgie  <Don@Scorgie.org>

	* src/TextThought.py: 
	* src/BaseThought.py:
	* src/Links.py:
	* src/DrawingThought.py:
	Fix potential exception on map opening

	* src/DrawingThought.py:
	Give all points their own unique colour

	* src/MMapArea.py:
	Update the colour selectors when loading
	a map

2008-03-21 Martin Schaaf <mascha@ma-scha.de>

	* src/DrawingThought.py
	* src/MainWindow.py
	* src/MMapArea.py
	* src/Browser.py
	* src/ImageThought.py
	* src/TextThought.py
	* data/labyrinth-ui.xml
	* data/labyrinth.glade
	o add import/export of maps (patch by Matthias Vogelgesang)
	* Authors
	o added Matthias Vogelgesang and me

2008-03-20 Martin Schaaf <mascha@ma-scha.de>

	* src/MMapArea.py
	o check for attribute transform on coord transformation
	* src/MainWindow.py
	o fix color update if a thought is selected that doesn't have background or foreground colors

2008-03-18 Martin Schaaf <mascha@ma-scha.de>

	* src/MMapArea.py
	* src/MainWindow.py
	o update color button when selecting thought (patch by Matthias Vogelgesang)

2008-03-03 Martin Schaaf <mascha@ma-scha.de>

	* ChangeLog
	o add missing entries

2008-02-18  Don Scorgie  <Don@Scorgie.org>

	* src/MMapArea.py: 
	Fix backspace and delete when not
	editing

2008-02-14 Martin Schaaf <mascha@ma-scha.de>

	* /svn_ignore
	add eclipse files to svn ignore 	

2008-02-14 Martin Schaaf <mascha@ma-scha.de>

	* src/Links.py
	set line witdth after link drawing back to original size 	

2008-02-14 Martin Schaaf <mascha@ma-scha.de>

	* src/MainWindow.py
	* src/MMapArea.py
	* src/*Thought.py
	* src/utils.py
	* src/Links.py
	add foreground and background color selection/setting support  	

2008-02-04 Martin Schaaf <mascha@ma-scha.de>

	* src/MainWindow.py
	* src/MMapArea.py
	o allow deletion of links
	o add some checks before deletion
	o catch attribute error exceptions in some cases where not only thoughts are expected  	

2008-02-04 Martin Schaaf <mascha@ma-scha.de>

	* src/MMapArea.py